# afterform

./: .env.example  .gitignore  README.md  TERMINOLOGY.md  pyproject.toml
.afterform_runs/cathie_wood_azure_verify_20260427_112300/: clip_selection_raw.json  clips.json  clips.meta.json  hooks.json  hooks.meta.json  hooks_raw.json  prune.json  prune.meta.json  prune_raw.json  source.info.json  transcript.json
.github/workflows/: publish-pypi.yml
docs/: ENVIRONMENT.md  EXHAUSTIVE_DISTINCT_CLIPS_SPEC.md  KNOWN_LIMITATIONS_AND_PROMPT_CONTRACT_GAP.md  PIPELINE.md  PROJECT_ISSUES.md  README.md  SHARING.md  TARGET_VIDEO_ANALYSIS.md  long-to-shorts.md  mcp_architecture.md  positioning.md
factory/runs/: RR-20260506-001-exhaustive-distinct-clips.md  RR-20260506-002-implement-exhaustive-clips.md
tests/: test_afterform_cli.py  test_afterform_namespace.py  test_ass_subtitles.py  test_audio_pruning.py  test_classify.py  test_cli.py  test_clip_ranking.py  test_clip_selection_cache.py  test_clip_selector.py  test_compile.py  test_content_pruning.py  test_face_detect.py  test_flow_clip_selection_rerank.py  test_gemini_generate.py  test_hook_detector.py  test_ingest_download.py  test_ingest_openai_chunks.py  test_layout_bbox.py  test_layout_timeline.py  test_layout_vision_unit.py  test_layouts.py  test_llm_provider.py  test_pipeline_debug.py  test_prompt_loader.py  test_reframe_ffmpeg.py  test_render_timeline.py  test_render_window.py  test_run_ledger.py  test_schemas.py  test_select_clips.py  test_server_tools.py  test_transcript_align.py  test_video_cache.py  test_vision.py
(+38 files in other folders)
